docs - readme for all the repo

--- a/Experiments/Starbucks.ipynb
+++ b/Experiments/Starbucks.ipynb
@@ -217,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Deep dive into the test results"
+    "## I. Statistical significance testing of the AB test results"
    ]
   },
   {
@@ -604,6 +604,13 @@
     "# however, the promotion had an important costs\n",
     "nir = 10 * purchase_e - 0.15 * n_e - 10 * n_c\n",
     "print(nir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# II. Building an optimization strategy with a supervised learning algorithm"
    ]
   },
   {
@@ -2108,5 +2115,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
